; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_spca500.c_sd_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_spca500.c_sd_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { %struct.cam }
%struct.cam = type { i8*, i8* }
%struct.usb_device_id = type { i64 }
%struct.sd = type { i64, i32, i32, i32, i32 }

@LogitechClickSmart310 = common dso_local global i64 0, align 8
@vga_mode = common dso_local global i8* null, align 8
@sif_mode = common dso_local global i8* null, align 8
@BRIGHTNESS_DEF = common dso_local global i32 0, align 4
@CONTRAST_DEF = common dso_local global i32 0, align 4
@COLOR_DEF = common dso_local global i32 0, align 4
@QUALITY_DEF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gspca_dev*, %struct.usb_device_id*)* @sd_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sd_config(%struct.gspca_dev* %0, %struct.usb_device_id* %1) #0 {
  %3 = alloca %struct.gspca_dev*, align 8
  %4 = alloca %struct.usb_device_id*, align 8
  %5 = alloca %struct.sd*, align 8
  %6 = alloca %struct.cam*, align 8
  store %struct.gspca_dev* %0, %struct.gspca_dev** %3, align 8
  store %struct.usb_device_id* %1, %struct.usb_device_id** %4, align 8
  %7 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %8 = bitcast %struct.gspca_dev* %7 to %struct.sd*
  store %struct.sd* %8, %struct.sd** %5, align 8
  %9 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %10 = getelementptr inbounds %struct.gspca_dev, %struct.gspca_dev* %9, i32 0, i32 0
  store %struct.cam* %10, %struct.cam** %6, align 8
  %11 = load %struct.usb_device_id*, %struct.usb_device_id** %4, align 8
  %12 = getelementptr inbounds %struct.usb_device_id, %struct.usb_device_id* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.sd*, %struct.sd** %5, align 8
  %15 = getelementptr inbounds %struct.sd, %struct.sd* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  %16 = load %struct.sd*, %struct.sd** %5, align 8
  %17 = getelementptr inbounds %struct.sd, %struct.sd* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @LogitechClickSmart310, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %2
  %22 = load i8*, i8** @vga_mode, align 8
  %23 = load %struct.cam*, %struct.cam** %6, align 8
  %24 = getelementptr inbounds %struct.cam, %struct.cam* %23, i32 0, i32 1
  store i8* %22, i8** %24, align 8
  %25 = load i8*, i8** @vga_mode, align 8
  %26 = call i8* @ARRAY_SIZE(i8* %25)
  %27 = load %struct.cam*, %struct.cam** %6, align 8
  %28 = getelementptr inbounds %struct.cam, %struct.cam* %27, i32 0, i32 0
  store i8* %26, i8** %28, align 8
  br label %37

29:                                               ; preds = %2
  %30 = load i8*, i8** @sif_mode, align 8
  %31 = load %struct.cam*, %struct.cam** %6, align 8
  %32 = getelementptr inbounds %struct.cam, %struct.cam* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  %33 = load i8*, i8** @sif_mode, align 8
  %34 = call i8* @ARRAY_SIZE(i8* %33)
  %35 = load %struct.cam*, %struct.cam** %6, align 8
  %36 = getelementptr inbounds %struct.cam, %struct.cam* %35, i32 0, i32 0
  store i8* %34, i8** %36, align 8
  br label %37

37:                                               ; preds = %29, %21
  %38 = load i32, i32* @BRIGHTNESS_DEF, align 4
  %39 = load %struct.sd*, %struct.sd** %5, align 8
  %40 = getelementptr inbounds %struct.sd, %struct.sd* %39, i32 0, i32 4
  store i32 %38, i32* %40, align 4
  %41 = load i32, i32* @CONTRAST_DEF, align 4
  %42 = load %struct.sd*, %struct.sd** %5, align 8
  %43 = getelementptr inbounds %struct.sd, %struct.sd* %42, i32 0, i32 3
  store i32 %41, i32* %43, align 8
  %44 = load i32, i32* @COLOR_DEF, align 4
  %45 = load %struct.sd*, %struct.sd** %5, align 8
  %46 = getelementptr inbounds %struct.sd, %struct.sd* %45, i32 0, i32 2
  store i32 %44, i32* %46, align 4
  %47 = load i32, i32* @QUALITY_DEF, align 4
  %48 = load %struct.sd*, %struct.sd** %5, align 8
  %49 = getelementptr inbounds %struct.sd, %struct.sd* %48, i32 0, i32 1
  store i32 %47, i32* %49, align 8
  ret i32 0
}

declare dso_local i8* @ARRAY_SIZE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
